# ProtFinder

./: README.md  pyproject.toml
configs/: FFinder_config.yaml  QFinder_config.yaml  RASFinder_config.yaml
data/: __init__.py  datasets.py
data_preparation/: empirical_dist.py  feature_extraction.py  package_features.py  simulation.py
empirical_parameters/: F_parameters.csv  G4_parameters.csv  I_parameters.csv
fitted_empirical_dist/: FREQ_A.npz  FREQ_C.npz  FREQ_D.npz  FREQ_E.npz  FREQ_F.npz  FREQ_G.npz  FREQ_H.npz  FREQ_I.npz  FREQ_K.npz  FREQ_L.npz  FREQ_M.npz  FREQ_N.npz  FREQ_P.npz  FREQ_Q.npz  FREQ_R.npz  FREQ_S.npz  FREQ_T.npz  FREQ_V.npz  FREQ_W.npz  FREQ_Y.npz  G4.npz  I.npz
lightning_logs/QFinder/checkpoints/: last.ckpt
lightning_logs/RASFinder/checkpoints/: last.ckpt
models/: QFinder.py  RASFinder.py  __init__.py
models/FFinder/: FFinder_last.joblib
testing/: callbacks.py  test_FFinder.py  test_QFinder.py  test_RASFinder.py
training/modules/: QFinder_lightning.py  RASFinder_lightning.py  __init__.py
training/scripts/: train_FFinder.py  train_QFinder.py  train_RASFinder.py
tuning/: tuning_FFinder.py  tuning_QFinder.py  tuning_RASFinder.py
