[project]
name = "model-selection-via-ml"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ete3>=3.1.3",
    "h5py>=3.15.1",
    "imbalanced-learn>=0.14.1",
    "lightning>=2.6.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
]
